@@ -1,0 +1,16 @@
+BaseName: auth_tls
+Version: 1.0
+Description: Perform AXFR over tls for authority zone
+CreationDate: Thu 29 Aug 09:35:40 CEST 2024
+Maintainer: dr. W.C.A. Wijngaards
+Category: 
+Component:
+CmdDepends: 
+Depends: 
+Help:
+Pre: auth_tls.pre
+Post: auth_tls.post
+Test: auth_tls.test
+AuxFiles: 
+Passed:
+Failure:
