@@ -1,0 +1,21 @@
+server:
+        logfile: "/dev/stderr"
+        xfrdfile: xfrd.state
+	username: ""
+	chroot: ""
+        zonesdir: ""
+	pidfile: "nsd.pid"
+        zonelistfile: "zone.list"
+	verbosity: 5
+	port: @NSD_PORT@
+        interface: 127.0.0.1@@NSD_PORT@
+
+	tls-port: @NSD_PORT@
+	tls-service-key: "nsd_server.key"
+	tls-service-pem: "nsd_server.pem"
+
+zone:
+	name: "example.com"
+	zonefile: "example.com.zone"
+	provide-xfr: 0.0.0.0/0 NOKEY
+	provide-xfr: ::0/0 NOKEY
