@@ -1,0 +1,16 @@
+BaseName: auth_tls_failcert
+Version: 1.0
+Description: Perform AXFR over tls for authority zone where the cert fails
+CreationDate: Thu 29 Aug 10:35:40 CEST 2024
+Maintainer: dr. W.C.A. Wijngaards
+Category: 
+Component:
+CmdDepends: 
+Depends: 
+Help:
+Pre: auth_tls_failcert.pre
+Post: auth_tls_failcert.post
+Test: auth_tls_failcert.test
+AuxFiles: 
+Passed:
+Failure:
