@@ -1,0 +1,23 @@
+server:
+	verbosity: 7
+	# num-threads: 1
+	interface: 127.0.0.1
+	port: @UNBOUND_PORT@
+	use-syslog: no
+	directory: ""
+	pidfile: "unbound.pid"
+	chroot: ""
+	username: ""
+	do-not-query-localhost: no
+	tls-service-key: "unbound_server.key"
+	tls-service-pem: "unbound_server.pem"
+	tls-cert-bundle: "nsd_server.pem"
+
+auth-zone:
+	name: "example.com"
+	for-upstream: yes
+	for-downstream: yes
+	# actual working primary: "127.0.0.1@@NSD_PORT@#nsd"
+	primary: "127.0.0.1@@NSD_PORT@#wrongname"
+	allow-notify: "127.0.0.2@@NSD_PORT@"
+	allow-notify: 127.0.0.1
